# Netreaper

./: .gitignore  PROJECT_EXPLANATION.md  README.md  app.py  attack_simulation.py  context.md  data_process.py  final_output_with_labels.csv  final_pipeline.py  handover.md  project_flowchart.md  pyproject.toml  requirements.txt  run_stage_b_attack.py  stage_a_baseline.py  stage_c_anomaly.py  stage_c_isolation_forest.pkl  stage_c_test.py  train_stage_a.py
src/data/: preprocess.py
src/mlshark/: __init__.py
src/mlshark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mlshark/stage_a/: __init__.py  config.py  data.py  model.py  pipeline.py  preprocessing.py  service.py  types.py
