rmdir /s /q __pycache__[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlshark"
version = "0.1.0"
description = "MLShark Stage A classification module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
